# folder-cleaner

./: .gitignore  README.md  com.github.Latesil.folder-cleaner.json  folder-cleaner.js  meson.build
build-aux/meson/: postinstall.py
data/: com.github.Latesil.folder-cleaner.appdata.xml.in  com.github.Latesil.folder-cleaner.desktop.in  com.github.Latesil.folder-cleaner.gschema.xml  meson.build
data/icons/: convert-icons-linux.sh
foldercleaner/: #folder_cleaner.ui#  constants.py  folder-cleaner.gresource.xml  folder-cleaner.in  folder_box.py  folder_cleaner.ui  main.py  meson.build  preferences.py  preferences.ui  window.py
nautilus-script/: folder-cleaner
po/: POTFILES.in  com.github.Latesil.folder-cleaner.pot  meson.build  ru.po
rpm/: folder-cleaner.spec
src/: constants.py  folder-box.ui  folder-box.ui~  folder-cleaner.ui  folder-cleaner.ui~  folder_box.py  gfile.py  helpers.py  main.js  main.py  main.ui  main.ui~  main_old.py  mime.py  notification.py  photos-sort.py  preferences.py  preferences.ui  preferences.ui~  pydbus.py  window.py
ui/: main.glade~  main.ui  main.ui~
